--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item">
+                        <li data-toggle="collapse" data-target=".navbar-collapse" class="nav-item">
                             <a class="nav-link" id="navbar-color-home" href="#">Home<span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item">
+                        <li data-toggle="collapse" data-target=".navbar-collapse" class="nav-item">
                             <a class="nav-link" id="navbar-color-about" href="#about">About</a>
                         </li>
-                        <li class="nav-item">
+                        <li data-toggle="collapse" data-target=".navbar-collapse" class="nav-item">
                             <a class="nav-link" id="navbar-color-tours" href="#tours">Tours</a>
                         </li>
-                        <li class="nav-item">
+                        <li data-toggle="collapse" data-target=".navbar-collapse" class="nav-item">
                             <a class="nav-link" id="navbar-color-gallery" href="gallery.html">Gallery</a>
                         </li>
-                        <li class="nav-item">
+                        <li data-toggle="collapse" data-target=".navbar-collapse"  class="nav-item">
                             <a class="nav-link" id="navbar-color-contact" href="#contact">Contact</a>
                         </li>
                     </ul>
@@ -59,8 +59,7 @@
                             <p class="lead welcome-sign-bottom">Travelling Shouldn't Be Just A Tour, It Should Be A Tale.<br>
                                 And We Are Striving To Make It A Very Special One</p>
                             <p>
-                                <a class="btn btn-primary btn-lg btn-style" href="#contact" role="button">Book A Tour With
-                                    Us!</a>
+                                <a class="btn btn-primary btn-lg btn-style" href="#contact" role="button">Book A Tour Witt Us!</a>
                             </p>
                         </div>
                 </div>
@@ -69,8 +68,7 @@
     </section>
 
     <!------------------------About page------------------------>
-    <div id="about">
-        <section>
+        <section id="about">
             <div class="about-margin">
             <div class="container">
                 <div class="row mt-5 heading-text">
@@ -112,13 +110,13 @@
             </div>
             </div>
         </section>
-    </div>
-    
-    <!------------------------Tours page------------------------>
-    <section id="image-tours"></section>
 
-    <div id="tours">
-        <section>
+   <!-----section for background image with parallax effect------>
+    <section id="image-tours"></section>
+ 
+    <!------------------------Tours page------------------------>
+   
+        <section id="tours">
             <div class="container">
                 <div class="row mt-5 heading-text">
                     <div class="col-12">
@@ -169,9 +167,9 @@
                                 <div class="card card-tours flex-fill">
                                     <!-------CREDIT: Image by _Artemis_ from Pixabay------->
                                     <img src="assets/images/connemara.jpg" class="card-img"
-                                        alt="Conemara mountain view">
+                                        alt="Connemara mountain view">
                                     <div class="card-desc">
-                                        <h3>Conemara Mountain Tours</h3>
+                                        <h3>Connemara Mountain Tours</h3>
                                     </div>
                                 </div>
                             </div>
@@ -197,21 +195,29 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-md d-flex">
-                                <div class="card card-tours flex-fill">
+                                <div class="card video-card-tours flex-fill">
                                     <!-------CREDIT: Video from youtube.com made by Video © www.absolutevisuals.ie------->
                                     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/CdBXc3zW30Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     <div class="card-body-desc">
-                                        <h3 class="margin-text">Glendalough, Wicklow Tour</h3>
+                                        <h3 class="margin-text"><i class="fas fa-video" aria-hidden="true"></i> Glendalough, Wicklow Video</h3>
                                     </div>
                                 </div>
                             </div>
-
+                            <div class="col-md d-flex">
+                                <div class="card video-card-tours flex-fill">
+                                    <!-------CREDIT: Video from youtube.com made by Video © www.absolutevisuals.ie------->
+                                   <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Jx6hBW7mMng" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <div class="card-body-desc">
+                                        <h3 class="margin-text"><i class="fas fa-video" aria-hidden="true"></i> Connemara Video</h3>
+                                    </div>
+                                </div>
+                            </div>
                              <div class="col-md d-flex">
-                                <div class="card card-tours flex-fill">
+                                <div class="card video-card-tours flex-fill">
                                     <!-------CREDIT: Video from youtube.com made by https://graylineireland.com------->
                                     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/7o-Lh7m2Maw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     <div class="card-desc">
-                                        <h3 class="margin-text">Cliffs of Moher Cruise & Day Tour</h3>
+                                        <h3 class="margin-text"><i class="fas fa-video" aria-hidden="true"></i> Cliffs Of Moher Video</h3>
                                     </div>
                                 </div>
                             </div>
@@ -221,14 +227,14 @@
             </div>
         </div> 
         </section>
-    </div>
 
 
-    <!-----------------Contact and Enquiry Form page--------------------->
+
+    <!-----section for background image with parallax effect------>
     <section id="image-contact"></section>
 
-    <div id="contact">
-        <section id="contact-bottom">
+    <!-----------------Contact and Enquiry Form page--------------------->
+        <section id="contact" id="contact-bottom">
             <div class="container">
                 <div class="row mt-5 heading-text">
                     <div class="col">
@@ -299,7 +305,7 @@
                 </div>
             </div>
         </section>
-    </div>
+ 
 
     <!-----------------Footer page--------------------->
     <footer>
