--- a/gallery.html
+++ b/gallery.html
@@ -59,109 +59,109 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container d-flex ">
             <div class="row">
                 <div class="col-12">
                     <p>Discover amazing walking trails, experience breath-taking views, and enjoy the crisp, fresh air with us! 
                         There are loop walks, old favorites, and endless undiscovered and spectacular places in Ireland –<strong> lets explore together !</strong> 
                     </p>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3 flex-fill image">
+                <div class="col-12 col-md-6 col-xl-3">
                     <a href="assets/images/gallery/girls-camping.jpg" target="_blank">
                         <img src="assets/images/gallery/girls-camping.jpg" class="image-style" alt="girls camping">
                     </a>
                 </div>
-                 <div class="col-12 col-md-6 col-xl-3 image">
+                 <div class="col-12 col-md-6 col-xl-3">
                     <a href="assets/images/gallery/connemara-tour.jpg" target="_blank">
                         <img src="assets/images/gallery/connemara-tour.jpg" class="image-style" alt="connemara tour">
                     </a>
                 </div>
-                  <div class="col-12 col-md-6 col-xl-3 image">
+                  <div class="col-12 col-md-6 col-xl-3">
                       <a href="assets/images/gallery/the-girl-by-the-stream.jpg" target="_blank">
                     <img src="assets/images/gallery/the-girl-by-the-stream.jpg" class="image-style" alt="the girls by the stream">
                     </a>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3 image">
+                <div class="col-12 col-md-6 col-xl-3">
                     <a href="assets/images/gallery/girls-on-the-beach.jpg" target="_blank">
                     <img src="assets/images/gallery/girls-on-the-beach.jpg" class="image-style" alt="girls on the beach">
                     </a>
                 </div>
-               <div class="col-12 col-md-6 col-xl-3 image">
+               <div class="col-12 col-md-6 col-xl-3">
                    <a href="assets/images/gallery/mountain-view.jpg" target="_blank">
                     <img src="assets/images/gallery/mountain-view.jpg" class="image-style" alt="mountain view">
                     </a>
                 </div>
-                 <div class="col-12 col-md-6 col-xl-3 image">
+                 <div class="col-12 col-md-6 col-xl-3">
                      <a href="assets/images/gallery/girls-in-the-forest.jpg" target="_blank">
                     <img src="assets/images/gallery/girls-in-the-forest.jpg" class="image-style" alt="girls in the forest">
                     </a>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3 image">
+                <div class="col-12 col-md-6 col-xl-3">
                     <a href="assets/images/gallery/irish-sheep.jpg" target="_blank">
                     <img src="assets/images/gallery/irish-sheep.jpg" class="image-style" alt="irish sheep">
                     </a>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3 image">
+                <div class="col-12 col-md-6 col-xl-3">
                     <a href="assets/images/gallery/group-on-the-mountain.jpg" target="_blank">
                     <img src="assets/images/gallery/group-on-the-mountain.jpg" class="image-style" alt="group on the mountain">
                     </a>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3 image">
+                <div class="col-12 col-md-6 col-xl-3">
                     <a href="assets/images/gallery/couple-in-the-car.jpg" target="_blank">
                     <img src="assets/images/gallery/couple-in-the-car.jpg" class="image-style" alt="couple in the car">
                     </a>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3 image">
+                <div class="col-12 col-md-6 col-xl-3">
                     <a href="assets/images/gallery/wicklow-tour.jpg" target="_blank">
                     <img src="assets/images/gallery/wicklow-tour.jpg" class="image-style" alt="wicklow tour">
                     </a>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3 image">
+                <div class="col-12 col-md-6 col-xl-3">
                     <a href="assets/images/gallery/girls-by-the-lake.jpg" target="_blank">
                     <img src="assets/images/gallery/girls-by-the-lake.jpg" class="image-style" alt="girls by the lake">
                     </a>
                 </div>
-                 <div class="col-12 col-md-6 col-xl-3 image">
+                 <div class="col-12 col-md-6 col-xl-3">
                      <a href="assets/images/gallery/on-the-mountain.jpg" target="_blank">
                     <img src="assets/images/gallery/on-the-mountain.jpg" class="image-style" alt="on the mountain">
                     </a>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3 image">
+                <div class="col-12 col-md-6 col-xl-3">
                     <a href="assets/images/gallery/lunch-break.jpg" target="_blank">
                     <img src="assets/images/gallery/lunch-break.jpg" class="image-style" alt="lunch break">
                     </a>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3 image">
+                <div class="col-12 col-md-6 col-xl-3">
                     <a href="assets/images/gallery/girls-beside-the-cross.jpg" target="_blank">
                     <img src="assets/images/gallery/girls-beside-the-cross.jpg" class="image-style" alt="girls beside the cross">
                     </a>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3 image">
+                <div class="col-12 col-md-6 col-xl-3">
                     <a href="assets/images/gallery/view-on-top-of-mountain.jpg" target="_blank">
                     <img src="assets/images/gallery/view-on-top-of-mountain.jpg" class="image-style" alt="view on top of mountain">
                     </a>
                 </div>
-                 <div class="col-12 col-md-6 col-xl-3 image">
+                 <div class="col-12 col-md-6 col-xl-3">
                      <a href="assets/images/gallery/girls-by-the-waterfall.jpg" target="_blank">
                     <img src="assets/images/gallery/girls-by-the-waterfall.jpg" class="image-style" alt="girls by the waterfall">
                     </a>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3 image">
+                <div class="col-12 col-md-6 col-xl-3">
                     <a href="assets/images/gallery/girl-on-the-beach.jpg" target="_blank">
                     <img src="assets/images/gallery/girl-on-the-beach.jpg" class="image-style" alt="girls on the beach">
                     </a>
                 </div>
-                 <div class="col-12 col-md-6 col-xl-3 image">
+                 <div class="col-12 col-md-6 col-xl-3">
                      <a href="assets/images/gallery/our-tour-guide.jpg" target="_blank">
                     <img src="assets/images/gallery/our-tour-guide.jpg" class="image-style" alt="our tour guy">
                     </a>
                 </div>
-                 <div class="col-12 col-md-6 col-xl-3 image">
+                 <div class="col-12 col-md-6 col-xl-3">
                      <a href="assets/images/gallery/girl-on-the-rock.jpg" target="_blank">
                     <img src="assets/images/gallery/girl-on-the-rock.jpg" class="image-style" alt="girls on the rock">
                     </a>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3 image">
+                <div class="col-12 col-md-6 col-xl-3">
                     <a href="assets/images/gallery/keel-strand-sign.jpg" target="_blank">
                     <img src="assets/images/gallery/keel-strand-sign.jpg" class="image-style" alt="keel strand sign">
                     </a>
@@ -190,7 +190,7 @@
         </div>
         <ul class="social-network">
             <li>
-                <a href="https://www.facebook.com" target="_blank" aria-label="Go to our Facebook page(opens in a new tab)">
+                <a href="https://www.facebook.com" target="_blank" aria-label="Go to our Facebook page (opens in a new tab)">
                     <i class="fab fa-facebook-f"></i>
                 </a>
             </li>
