add logo.ico, favicon to the site tab, correct spelling

--- a/gallery.html
+++ b/gallery.html
@@ -59,7 +59,7 @@
             </div>
         </div>
 
-        <div class="container d-flex ">
+        <div class="container">
             <div class="row">
                 <div class="col-12">
                     <p>Discover amazing walking trails, experience breath-taking views, and enjoy the crisp, fresh air with us! 
