--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon"  type="image/png" href="assets/images/logo.ico"/>
     <title>The Hikers</title>
 </head>
 
@@ -78,8 +79,8 @@
                 </div>
             </div>
 
-            <div class="container  about-content">
-                <div class="row  d-flex align-items-center content-item">
+            <div class="container d-flex align-items-center about-content">
+                <div class="row mt-5 d-flex align-items-center content-item">
                     <div class="col-12 col-lg-6 ">
                         <div class="card card-about">
                             <a href="assets/images/about-team.jpg" target="_blank">
@@ -125,8 +126,8 @@
                 </div>
             </div>
 
-            <div class="container ">
-                <div class="row my-5 content-item-text  ">
+            <div class="container">
+                <div class="row my-5 content-item-text ">
                     <div class="col-12 tours-style">
                         <h2><i class="fab fas fas fa-hiking"></i> Tour option to chose :</h2>
                         <p> We organize tours from short strolls to multi-day hikes with our Certified Guide who will 
