add to README.md bugs and solutions part and more

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="icon"  type="image/png" href="assets/images/logo.ico"/>
+    <link rel="icon"  type="image/ico" href="assets/images/favicon.ico"/>
     <title>The Hikers</title>
 </head>
 
@@ -54,15 +54,15 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-sm-12">
-                        <div class="jumbotron text-center">
-                            <h1 class="welcome-sign-top">Unforgettable Hiking In Ireland</h1>
-                            <hr>
-                            <p class="lead welcome-sign-bottom">Travelling Shouldn't Be Just A Tour, It Should Be A Tale.<br>
-                                And We Are Striving To Make It A Very Special One</p>
-                            <p>
-                                <a class="btn btn-primary btn-lg btn-style" href="#contact" role="button">Book A Tour Witt Us!</a>
-                            </p>
-                        </div>
+                    <div class="jumbotron text-center">
+                        <h1 class="welcome-sign-top">Unforgettable Hiking In Ireland</h1>
+                        <hr>
+                        <p class="lead welcome-sign-bottom">Travelling Shouldn't Be Just A Tour, It Should Be A Tale.<br>
+                            And We Are Striving To Make It A Very Special One</p>
+                        <p>
+                            <a class="btn btn-primary btn-lg btn-style" href="#contact" role="button">Book A Tour Witt Us!</a>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -79,8 +79,8 @@
                 </div>
             </div>
 
-            <div class="container d-flex align-items-center about-content">
-                <div class="row mt-5 d-flex align-items-center content-item">
+            <div class="container about-content">
+                <div class="row mt-5 content-item">
                     <div class="col-12 col-lg-6 ">
                         <div class="card card-about">
                             <a href="assets/images/about-team.jpg" target="_blank">
