add gallery.html content to index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <a class="nav-link" id="navbar-color-tours" href="#tours">Tours</a>
                         </li>
                         <li data-toggle="collapse" data-target=".navbar-collapse" class="nav-item">
-                            <a class="nav-link" id="navbar-color-gallery" href="gallery.html">Gallery</a>
+                            <a class="nav-link" id="navbar-color-gallery" href="#gallery">Gallery</a>
                         </li>
                         <li data-toggle="collapse" data-target=".navbar-collapse"  class="nav-item">
                             <a class="nav-link" id="navbar-color-contact" href="#contact">Contact</a>
@@ -70,7 +70,7 @@
 
     <!--About page-->
     <section id="about">
-        <div class="about-margin">
+        <div class="section-margin-bottom">
             <div class="container">
                 <div class="row mt-5 heading-text">
                     <div class="col-12">
@@ -149,7 +149,7 @@
     <!--Tours page-->
    
         <section id="tours">
-            <div class="tours-margin">
+            <div class="section-margin-bottom">
                 <div class="container">
                     <div class="row mt-4 heading-text">
                         <div class="col-12">
@@ -186,7 +186,7 @@
                                 <div class="col-md d-flex padding"> 
                                     <div class="card card-tours">
                                         <!--CREDIT: Photo by Steven Hylands from Pexels-->
-                                        <img src="assets/images/wicklow2.jpg" class="card-img" width="727" height="409" alt="Wicklow mountain view">
+                                        <img src="assets/images/wicklow.jpg" class="card-img" width="727" height="409" alt="Wicklow mountain view">
                                             <div class="middle">
                                                 <div class="text">
                                                     <a href="tel:+55545667800" class="phone-number" aria-label="Go to our Phone Number">Call Us For More Information</a>
@@ -200,7 +200,7 @@
                                 <div class="col-md d-flex padding">
                                     <div class="card card-tours">
                                         <!--CREDIT: Image by _Artemis_ from Pixabay-->
-                                        <img src="assets/images/connemara3.jpg" class="card-img" width="727" height="409" alt="Connemara mountain view">
+                                        <img src="assets/images/connemara.jpg" class="card-img" width="727" height="409" alt="Connemara mountain view">
                                             <div class="middle">
                                                 <div class="text">
                                                     <a href="tel:+55545667800" class="phone-number" aria-label="Go to our Phone Number">Call Us For More Information</a>
@@ -215,7 +215,7 @@
                                 <div class="col-md d-flex padding">
                                     <div class="card card-tours">
                                         <!--CREDIT: Image by Nanni05 from Pixabay-->
-                                        <img src="assets/images/cliff-of-moher2.jpg" class="card-img" width="727" height="409" alt="Cliffs of Moher view">
+                                        <img src="assets/images/cliff-of-moher.jpg" class="card-img" width="727" height="409" alt="Cliffs of Moher view">
                                         <div class="middle">
                                             <div class="text">
                                                 <a href="tel:+55545667800" class="phone-number" aria-label="Go to our Phone Number">Call Us For More Information</a>
@@ -285,8 +285,114 @@
     </section>
 
     <!-- div for background image with parallax effect -->
-    <div id="image-contact"></div>
+    <div id="image-gallery"></div>
 
+    <!--Gallery page-->
+    <section  id="gallery"> 
+        <div class="section-margin-bottom">
+            <div class="container">
+                <div class="row mt-5 d-flex justify-content-center heading-text">
+                    <div class="col">
+                        <h1>Gallery</h1>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <p>Discover amazing walking trails, experience breath-taking views, and enjoy the crisp, fresh air with us! 
+                            There are loop walks, old favorites, and endless undiscovered and spectacular places in Ireland –<strong> lets explore together !</strong> 
+                        </p>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3">
+                        <a href="assets/images/gallery/girls-camping.jpg" target="_blank">
+                            <img src="assets/images/gallery/girls-camping.jpg" class="image-style" alt="girls camping">
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3">
+                        <a href="assets/images/gallery/connemara-tour.jpg" target="_blank">
+                            <img src="assets/images/gallery/connemara-tour.jpg" class="image-style" alt="connemara tour">
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3">
+                        <a href="assets/images/gallery/the-girl-by-the-stream.jpg" target="_blank">
+                        <img src="assets/images/gallery/the-girl-by-the-stream.jpg" class="image-style" alt="the girls by the stream">
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3">
+                        <a href="assets/images/gallery/girls-on-the-beach.jpg" target="_blank">
+                        <img src="assets/images/gallery/girls-on-the-beach.jpg" class="image-style" alt="girls on the beach">
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3">
+                        <a href="assets/images/gallery/our-tour-guide.jpg" target="_blank">
+                        <img src="assets/images/gallery/our-tour-guide.jpg" class="image-style" alt="our tour guy">
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3">
+                        <a href="assets/images/gallery/girls-in-the-forest.jpg" target="_blank">
+                        <img src="assets/images/gallery/girls-in-the-forest.jpg" class="image-style" alt="girls in the forest">
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3">
+                        <a href="assets/images/gallery/irish-sheep.jpg" target="_blank">
+                        <img src="assets/images/gallery/irish-sheep.jpg" class="image-style" alt="irish sheep">
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3">
+                        <a href="assets/images/gallery/group-on-the-mountain.jpg" target="_blank">
+                        <img src="assets/images/gallery/group-on-the-mountain.jpg" class="image-style" alt="group on the mountain">
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3">
+                        <a href="assets/images/gallery/couple-in-the-car.jpg" target="_blank">
+                        <img src="assets/images/gallery/couple-in-the-car.jpg" class="image-style" alt="couple in the car">
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3">
+                        <a href="assets/images/gallery/wicklow-tour.jpg" target="_blank">
+                        <img src="assets/images/gallery/wicklow-tour.jpg" class="image-style" alt="wicklow tour">
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3">
+                        <a href="assets/images/gallery/girls-by-the-lake.jpg" target="_blank">
+                        <img src="assets/images/gallery/girls-by-the-lake.jpg" class="image-style" alt="girls by the lake">
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3">
+                        <a href="assets/images/gallery/on-the-mountain.jpg" target="_blank">
+                        <img src="assets/images/gallery/on-the-mountain.jpg" class="image-style" alt="on the mountain">
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3">
+                        <a href="assets/images/gallery/lunch-break.jpg" target="_blank">
+                        <img src="assets/images/gallery/lunch-break.jpg" class="image-style" alt="lunch break">
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3">
+                        <a href="assets/images/gallery/girls-beside-the-cross.jpg" target="_blank">
+                        <img src="assets/images/gallery/girls-beside-the-cross.jpg" class="image-style" alt="girls beside the cross">
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3">
+                        <a href="assets/images/gallery/view-on-top-of-mountain.jpg" target="_blank">
+                        <img src="assets/images/gallery/view-on-top-of-mountain.jpg" class="image-style" alt="view on top of mountain">
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3">
+                        <a href="assets/images/gallery/girls-by-the-waterfall.jpg" target="_blank">
+                        <img src="assets/images/gallery/girls-by-the-waterfall.jpg" class="image-style" alt="girls by the waterfall">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+     <!-- div for background image with parallax effect -->
+    <div id="image-contact"></div>
+    
     <!-- Contact and Enquiry Form page -->
     <section id="contact">
         <div class="container">
