add remove comments in css tidy code

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
             <div class="container about-content">
                 <div class="row mt-5 content-item">
-                    <div class="col-12 col-md-6 d-flex align-items-center">
+                    <div class="col-12 col-lg-6 d-flex align-items-center">
                         <div class="card card-about">
                             <img src="assets/images/about-team.jpg" class="card-img" width="305" height="241" alt="The hikers team">
                             <div class="card-desc">
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 content-item-text">
+                    <div class="col-12 col-lg-6 content-item-text">
                         <h4> Welcome to the Ireland hiking of our dreams, We hope yours too</h4>
                         <p>If you love hiking, you are fascinated by wonderful views and magnificent scenery, and
                             looking for adventure
@@ -113,7 +113,7 @@
             </div>
             <div class="container about-content">
                 <div class="row mt-5 content-item">
-                    <div class="col-12 col-md-6 d-flex align-items-center">
+                    <div class="col-12 col-lg-6 d-flex align-items-center">
                         <div class="card card-map">
                             <div class="video-wrapper">
                                 <iframe
@@ -126,7 +126,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 content-item-text">
+                    <div class="col-12 col-lg-6 content-item-text">
                         <h4>About Ireland’s Highest Mountains:</h4>
                         <p>There are many excellent opportunities in Ireland for hiking.
                             Many of Ireland's largest mountain ranges stretch along the coast,
@@ -173,28 +173,35 @@
             <div class="container">
                 <div class="row my-4 content-item-text ">
                     <div class="col-12 tours-style">
-                        <h2><i class="fab fas fas fa-hiking" aria-hidden="true"></i> About Tours:</h2>
+                        <h2>About Tours:</h2>
                         <p> We organize tours from short strolls to multi-day hikes with our Certified Guide who will
                             look after not only your safety but also entertainment, as good sense of humour is Arek’s
-                            tremendous asset. Our tours include a variation of the trails in the region of your choice
+                            tremendous asset.</p>
+                        <p>Our tours include a variation of the trails in the region of your choice
                             and are carefully selected and personalized to suit your time, age, and level of
-                            advancement.
-                            The cost of our hiking tours is based on the length of time, season requirements,
-                            accommodation,
-                            and food preferences. Let us know about your hopes and expectations, and we will look after
-                            the
-                            organization of an incredibly special adventure for you.
+                            advancement.</p>
+                        <p> The cost of our hiking tours is based on the length of time, season requirements,
+                            accommodation, and food preferences. </p>  
+                        <p> Let us know about your hopes and expectations, and we will look after
+                            the organization of an incredibly special adventure for you.
                             <br>For more information:<br>
-                            <a href="#contact" class="contact-details" aria-label="Go to our contact form">
+                            <a href="#contact" class="contact-details" aria-label="Go p>to our contact form">
                                 <strong><i class="fas fa-envelope" aria-hidden="true"></i> Contact Us </strong>
                             </a>
                         </p>
                     </div>
                 </div>
             </div>
+              <div class="container">
+                <div class="row mt-5 tours-style">
+                    <div class="col-12">
+                        <h2><i class="fab fas fas fa-hiking" aria-hidden="true"></i> Tours available...</h2>
+                    </div>
+                </div>
+            </div>
             <!--CREDIT: Idea/code how to make cards from Jim Lynx MS1 project-->
             <div class="container">
-                <div class="row mt-4">
+                <div class="row mt-2">
                     <div class="col tours-images-style">
                         <div class="container-fluid">
                             <div class="row">
@@ -210,7 +217,7 @@
                                             </div>
                                         </div>
                                         <div class="card-desc">
-                                            <h3>Wicklow Mountain Tour</h3>
+                                            <h3>Wicklow Mountain</h3>
                                         </div>
                                     </div>
                                 </div>
@@ -226,7 +233,7 @@
                                             </div>
                                         </div>
                                         <div class="card-desc">
-                                            <h3>Connemara Mountain Tour</h3>
+                                            <h3>Connemara Mountain</h3>
                                         </div>
                                     </div>
                                 </div>
@@ -242,7 +249,7 @@
                                                 </div>
                                             </div>
                                         <div class="card-desc">
-                                            <h3>Cliffs Of Moher Tour</h3>
+                                            <h3>Cliffs Of Moher</h3>
                                         </div>
                                     </div>
                                 </div>
@@ -273,8 +280,7 @@
                                                 allowfullscreen></iframe>
                                         </div>
                                         <div class="card-body-desc">
-                                            <h3><i class="fas fa-video" aria-hidden="true"></i> Glendalough, Wicklow
-                                            </h3>
+                                            <h3><i class="fas fa-video" aria-hidden="true"></i> Glendalough</h3>
                                         </div>
                                     </div>
                                 </div>
